# lutufi

./: .editorconfig  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  GuardRails.txt  INSTALL.md  LUTUFI_GUIDE.md  MANIFEST.in  README.md  SECURITY.md  overview.txt  prompt.md  pyproject.toml  task.txt
.github/workflows/: ci.yml  publish.yml
benches/: factor_operations.rs  inference_benchmarks.rs  learning_benchmarks.rs  representation_benchmarks.rs
bindings/ffi/: domain.rs  inference.rs  learning.rs  mod.rs  models.rs  variable.rs
bindings/python/lutufi/: __init__.py  _lutufi.pyi  inference.py  io.py  learning.py  models.py
docs/: 100 Knots.md  BIBLIOGRAPHY.md  DEVELOPMENT_ROADMAP.md  EXECUTIVE_SUMMARY.md  GLOSSARY.md  JOSS_PREP.md  KNOWLEDGE_AUDIT.md  PROPOSAL.md  README.md  RESEARCH_ROADMAP.md  RESEARCH_STATEMENT.md  TECHNICAL_SUMMARY.md  TESTING.md  THEORY_OF_CHANGE.md  lutufi_guardrails.md
docs/analysis/: BNLEARN_ANALYSIS.md  GAP_ANALYSIS.md  GEPHI_ANALYSIS.md  GRAPHTOOL_IGRAPH_ANALYSIS.md  NETWORKX_ANALYSIS.md  PGMPY_ANALYSIS.md  PYMC_PYRO_ANALYSIS.md
docs/communication/: ACADEMIC_PAPER_OUTLINE.md  COMMUNITY_BUILDING.md  DOCUMENTATION_PHILOSOPHY.md  EXAMPLE_LIBRARY_STRUCTURE.md
docs/design/: API_DESIGN.md  ARCHITECTURE.md  CAUSAL_VS_STATISTICAL.md  DATA_FLOW.md  DATA_MODEL.md  DEPENDENCY_ANALYSIS.md  ERROR_HANDLING.md  INCREMENTAL_INFERENCE.md  LANGUAGE_DECISION.md  MULTILANGUAGE_BINDINGS.md  PERFORMANCE_BENCHMARKING.md  SCALABILITY.md  SECURITY.md  SERIALIZATION.md  TESTING_PHILOSOPHY.md  VISUALIZATION.md
docs/domains/: EPIDEMIOLOGICAL_MODELS.md  FINANCIAL_CONTAGION.md  FINANCIAL_CRIME_NETWORKS.md  MISINFORMATION_OPERATIONS.md  OPINION_DYNAMICS.md  ORGANIZATIONAL_NETWORKS.md  POLITICAL_NETWORKS.md  POTENTIAL_PROJECTS.md  RESEARCH_FIELDS.md  SOCIAL_INFLUENCE_MODELS.md  SUPPLY_CHAIN_NETWORKS.md
docs/foundations/: BAYESIAN_NETWORKS.md  BELIEF_PROPAGATION.md  CAUSAL_MODELS.md  CONDITIONAL_INDEPENDENCE.md  DARK_NETWORKS.md  ECONOMIC_NETWORKS.md  EXPONENTIAL_RANDOM_GRAPH_MODELS.md  INFORMATION_THEORY.md  MATHEMATICS.md  MISSING_DATA.md  MULTILAYER_NETWORKS.md  NETWORK_RESILIENCE.md  NETWORK_SCIENCE.md  NUMERICAL_STABILITY.md  RANDOM_GRAPH_MODELS.md  SOCIAL_NETWORKS.md  STOCHASTIC_PROCESSES.md  TEMPORAL_NETWORKS.md
docs/governance/: CONTRIBUTING.md  DATA_PRIVACY.md  ETHICS.md  EXPORT_CONTROL.md  LICENSE_RATIONALE.md  MISUSE_ANALYSIS.md
docs/reference/: ASSUMPTIONS_LOG.md  DESIGN_DECISIONS.md  OPEN_QUESTIONS.md
docs/research/: INTELLIGENCE_WORKFLOWS.md  REGULATOR_WORKFLOWS.md  REPRODUCIBILITY_CRISIS.md  RESEARCHER_WORKFLOWS.md
examples/: 01_quickstart.py  02_inference_algorithms.py  03_learning_from_data.py  04_networkx_and_io.py  05_causal_reasoning.py  06_markov_random_fields.py  07_dynamic_bayesian_networks.py  08_editing_and_error_handling.py  09_visualization.py  README.md
examples/targeted/: dark_network.py  interbank_risk.py  sir_model.py
fixtures/dynamic/: umbrella.json
fixtures/ground_truth/: asia.json  ising_chain.json  mrf_grid.json  sprinkler.json  student.json  v_structure.json
fixtures/large_scale/: grid_10x10.json
fixtures/missing_edges/: asia_missing_edges.json
fixtures/missing_nodes/: asia_missing_nodes.json
python/lutufi/: __init__.py  inference.py  learning.py
scripts/: benchmark_baseline.rs  generate_grid.py
src/: lib.rs
src/core/: assignment.rs  backend.rs  domain.rs  error.rs  factor.rs  graph.rs  mod.rs  numerics.rs  variable.rs
src/core/factor/: cpt.rs  mod.rs  scope.rs  tabular.rs  utils.rs
src/core/inference/: config.rs  engine.rs  junction_tree.rs  lbp.rs  mcmc.rs  mod.rs  strategies.rs  strategy.rs  strategy_factory.rs  variable_elimination.rs  variational.rs
src/core/inference/dbn/: engine.rs  evidence_manager.rs  hmm.rs  incremental.rs  kalman.rs  mod.rs  temporal_query.rs  types.rs
src/core/io/: bif.rs  convert.rs  export.rs  mod.rs  uai.rs  xmlbif.rs
src/core/io/lmf/: convert.rs  io.rs  migration.rs  mod.rs  network_ext.rs  tests.rs  types.rs
src/core/learning/: data_processor.rs  mod.rs  parameter.rs
src/core/learning/structure/: constraint_based.rs  mod.rs  score_based.rs
src/core/learning/structure/constraint_based/: learner.rs  meeks.rs  mod.rs  network.rs  orientation.rs  skeleton.rs  types.rs
src/core/missing_data/: diagnostics.rs  imputation.rs  mcar_mar.rs  mnar.rs  mod.rs  reconstruction.rs  sensitivity.rs  types.rs
src/core/models/: bayesian_network.rs  bayesian_network_builder.rs  causal_model.rs  dynamic_bayesian_network.rs  factor_graph.rs  factor_store.rs  markov_random_field.rs  mod.rs  registry.rs  sampler.rs
src/core/models/causal_model/: criteria.rs  identification.rs  intervention.rs  mod.rs  types.rs
src/core/models/non_stationary/: dbn.rs  mod.rs  regime.rs  simulation.rs  transition_model.rs
src/core/representation/: mod.rs
src/core/scalability/: chunked_ve.rs  csi.rs  lazy_evaluation.rs  memory_mapped.rs  mod.rs  noisy_or.rs  parallel_inference.rs  sparse_cpt.rs  streaming.rs
src/core/scalability/wgpu_backend/: compute.rs  learning.rs  mcmc.rs  mod.rs  shaders.rs
src/ffi/: mod.rs
tests/: test_ground_truth.py  test_package_integrity.py
tests/benchmarks/: baseline_2026-04-17.json  benchmark_networks.rs
tests/ground_truth/: alarm.json  chain.json  fork.json
tests/integration/: inference_unification.rs  model_construction.rs
tests/unit/: assignment_tests.rs  causal_tests.rs  d_separation_tests.rs  domain_tests.rs  error_tests.rs  factor_tests.rs  graph_tests.rs  junction_tree_tests.rs  lbp_tests.rs  learning_tests.rs  log_space_tests.rs  mcmc_tests.rs  missing_data_tests.rs  parameter_learner_tests.rs  variable_elimination_tests.rs  variable_tests.rs  variational_tests.rs
tests/unit/models/: bayesian_networks_tests.rs
validation/: conftest.py  test_api_finalization.py  test_asia_construction.py  test_ecosystem_integration.py  test_exact_inference.py  test_ground_truth.py  test_installation.py  test_package_integrity.py  test_variable_elimination.py
