[package]
name = "lutufi"
version = "0.1.0"
edition = "2021"
authors = ["Lutufi Contributors"]
description = "High-performance network analysis library with probabilistic reasoning"
license = "MIT OR Apache-2.0"
repository = "https://github.com/lutufi/lutufi"
keywords = ["networks", "graphs", "bayesian", "inference", "probabilistic"]
categories = ["science", "mathematics", "algorithms"]
rust-version = "1.70"

[lib]
name = "lutufi"
crate-type = ["cdylib", "rlib"]

[dependencies]
# Core numerical computing
ndarray = { version = "0.15", features = ["serde", "rayon"] }
sprs = { version = "0.11", features = ["serde"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Python bindings (PyO3)
pyo3 = { version = "0.20", features = ["extension-module", "abi3-py38"], optional = true }
numpy = { version = "0.20", optional = true }

# Parallelism
rayon = "1.8"

# Logging
tracing = "0.1"

# Utilities
indexmap = "2.0"
parking_lot = "0.12"

[dependencies.uuid]
version = "1.6"
features = ["v4", "serde"]

[features]
default = ["python"]
python = ["dep:pyo3", "dep:numpy"]

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.4"
tempfile = "3.8"
pretty_assertions = "1.4"

[[bench]]
name = "inference_benchmarks"
harness = false

[[bench]]
name = "learning_benchmarks"
harness = false

[[bench]]
name = "representation_benchmarks"
harness = false

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "abort"

[profile.bench]
opt-level = 3
lto = "thin"
codegen-units = 1