[package]
name = "lutufi-core"
version = "1.0.0"
edition = "2021"
authors = ["Wasswa Lutufi Sebbanja"]
description = "Probabilistic inference over social and economic networks"
license = "Apache-2.0"
repository = "https://github.com/luckychiller/lutufi"
readme = "README.md"
keywords = ["bayesian-network", "inference", "graphical-models", "causality"]
categories = ["science", "mathematics", "algorithms"]
# Keep the sdist / crate package lean: research notes, design docs, and CI
# config are on GitHub but not needed to build the library.
exclude = [
    "/docs",
    "/research",
    "/.github",
    "/venv",
    "/prompt.md",
    "/thought.txt",
    "/LUTUFI_GUIDE.md",
    "/validation",
    "/examples",
]

[lib]
name = "lutufi_core"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
uuid         = { version = "1.6",  features = ["v4", "serde"] }
serde        = { version = "1.0",  features = ["derive"] }
serde_json   = "1.0"
thiserror    = "1.0"
ndarray      = "0.15"
ndarray-stats = "0.5"
sprs         = "0.11"
ordered-float = "3.0"
indexmap     = "2.0"
log          = "0.4"
petgraph     = { version = "0.6", features = ["serde"] }
rand         = "0.8"
rand_distr   = "0.4"
statrs       = "0.16"
chrono       = "0.4"
pyo3         = { version = "0.22", features = ["extension-module", "abi3-py39"], optional = true }
jni          = { version = "0.21", optional = true }
rayon        = "1.7"
memmap2      = "0.9"
quick-xml    = "0.36"
clap         = { version = "4.5", features = ["derive"] }
wgpu         = { version = "22.1", optional = true }
bytemuck     = { version = "1.14", features = ["derive"], optional = true }
pollster     = { version = "0.3", optional = true }

[dev-dependencies]
approx    = "0.5"
rstest    = "0.18"
criterion = { version = "0.5", features = ["html_reports"] }

[features]
default = []
python  = ["pyo3"]
java    = ["jni"]
gpu     = ["wgpu", "bytemuck", "pollster"]

# Tests 
[[test]]
name = "unit_variable"
path = "tests/unit/variable_tests.rs"

[[test]]
name = "unit_domain"
path = "tests/unit/domain_tests.rs"

[[test]]
name = "unit_assignment"
path = "tests/unit/assignment_tests.rs"

[[test]]
name = "unit_factor"
path = "tests/unit/factor_tests.rs"

[[test]]
name = "unit_graph"
path = "tests/unit/graph_tests.rs"

[[test]]
name = "unit_error"
path = "tests/unit/error_tests.rs"

[[test]]
name = "unit_log_space"
path = "tests/unit/log_space_tests.rs"

[[test]]
name = "integration_model_construction"
path = "tests/integration/model_construction.rs"

[[test]]
name = "unit_variable_elimination"
path = "tests/unit/variable_elimination_tests.rs"

[[test]]
name = "unit_junction_tree"
path = "tests/unit/junction_tree_tests.rs"

[[test]]
name = "unit_lbp"
path = "tests/unit/lbp_tests.rs"

[[test]]
name = "unit_mcmc"
path = "tests/unit/mcmc_tests.rs"

[[test]]
name = "unit_variational"
path = "tests/unit/variational_tests.rs"

[[test]]
name = "unit_d_separation"
path = "tests/unit/d_separation_tests.rs"

[[test]]
name = "unit_learning"
path = "tests/unit/learning_tests.rs"

[[test]]
name = "unit_causal"
path = "tests/unit/causal_tests.rs"

[[test]]
name = "unit_missing_data"
path = "tests/unit/missing_data_tests.rs"

[[test]]
name = "integration_inference_unification"
path = "tests/integration/inference_unification.rs"

[[test]]
name = "benchmark_networks"
path = "tests/benchmarks/benchmark_networks.rs"

# Benchmarks 
[[bench]]
name = "factor_operations"
path = "benches/factor_operations.rs"
harness = false

# CLI binary
[[bin]]
name = "lutufi"
path = "src/bin/lutufi.rs"

# Scripts
[[bin]]
name = "benchmark_baseline"
path = "scripts/benchmark_baseline.rs"

# Release profile
[profile.release]
opt-level      = 3
lto            = true
codegen-units  = 1
